<resources>
    <string name="app_name">RideShareU</string>
    <string name="action_settings">Settings</string>
    <string name="riding">Riding?</string>
    <string name="driving">Driving?</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="title_activity_log_in">Log In</string>
    <string name="firstName">First Name:</string>
    <string name="lastName">Last Name:</string>
    <string name="collegeEmail">College Email:</string>
    <string name="password">Password:</string>
    <string name="title_activity_driver_form">DriverForm</string>
    <string name="driverHeader">Driving</string>
    <string name="from">From:</string>
    <string name="destination">To:</string>
    <string name="roundTrip">Round Trip?</string>
    <string name="date">Departure:</string>
    <string name="timeSelect">Time:</string>
    <string name="HelpButton">Need Help? Click Here!</string>
    <string name="returnDate">Return:</string>
    <string name="money">Max Cost</string>
    <string name="search">Search For Rides</string>
    <string name="seats">Seats</string>
    <string name="open">Open</string>
    <string name="taken">taken</string>
    <string name="driver">Driver</string>
    <string name="listTrip">List Trip</string>
    <string name="totalSeats">Total seats</string>
    <string name="eduhint">must use a .edu address</string>
    <string name="shorthelp">Help?</string>
    <string name="title_activity_screenzero">screenzero</string>
    <string name="contactnumber">(804)9298697</string>
    <string name="contactdisclaimer">Welcome to RideShareU, the travelling students\' best friend! Comments? Trouble with the app? We would love to hear it all! Please email: </string>
    <string name="contact_suggestion">Or call our 24/7 help line:</string>
    <string name="title_activity_newhelpscreen">newhelpscreen</string>
    <string name="contact_email">john.s.atwood@gmail.com</string>
    <string name="signUp">Sign Up</string>
    <string name="Date">Date</string>
    <string name="title_activity_list_rides">ListRides</string>
    <string name="textview">textview</string>
    <string name="button">1</string>
    <string name="Search">Search</string>
    <string name="Money">Price per Seat</string>
</resources>
