<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal|center_vertical"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.austin.myapplication.rideSearch">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|top"
            android:text="@string/seats"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <!--Start of form-->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="50dp"
                android:paddingTop="50dp">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:text="@string/driver" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="50dp"
                android:paddingTop="50dp">

                <Button
                    android:id="@+id/seat_2nd_row1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:onClick="onClick"
                    android:text="@string/open" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="50dp"
                android:paddingTop="50dp">

                <Button
                    android:id="@+id/seat_3rd_row1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:onClick="onClick"
                    android:text="@string/open"
                    android:visibility="invisible" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="50dp"
                android:paddingTop="50dp">

                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:text="@string/open"
                    android:visibility="invisible" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="50dp"
                android:paddingTop="50dp">

                <Button
                    android:id="@+id/seat_2nd_row2"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:onClick="onClick"
                    android:text="@string/open"
                    android:visibility="invisible" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="50dp"
                android:paddingTop="50dp">

                <Button
                    android:id="@+id/seat_3rd_row2"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:onClick="onClick"
                    android:text="@string/open"
                    android:visibility="invisible" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="50dp"
                android:paddingTop="50dp">

                <Button
                    android:id="@+id/seat_passenger"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:onClick="onClick"
                    android:text="@string/open" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="50dp"
                android:paddingTop="50dp">

                <Button
                    android:id="@+id/seat_2nd_row3"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:onClick="onClick"
                    android:text="@string/open" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="50dp"
                android:paddingTop="50dp">

                <Button
                    android:id="@+id/seat_3rd_row3"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:onClick="onClick"
                    android:text="@string/open"
                    android:visibility="invisible" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>